--- a/app/assets/stylesheets/custom/buttons.css
+++ b/app/assets/stylesheets/custom/buttons.css
@@ -1,8 +1,8 @@
 @utility btn {
-  @apply inline-flex cursor-pointer items-center justify-center rounded-md px-6 py-2 text-center text-sm font-medium no-underline transition duration-200 ease-in-out focus:ring-2 active:scale-95;
+  @apply inline-flex cursor-pointer items-center justify-center rounded-md px-6 py-2 text-center text-sm font-medium no-underline transition duration-200 ease-in-out focus:ring-2 active:not-disabled:scale-95;
 
   &.btn-lg {
-    @apply px-9 py-3 text-lg active:scale-90;
+    @apply px-9 py-3 text-lg active:not-disabled:scale-90;
   }
 
   &.btn-sm {
@@ -44,7 +44,7 @@
     @apply absolute inset-0 -z-10 transition-colors duration-200 bg-gradient-to-br from-rose-500 to-rose-600;
   }
 
-  &:not(.btn-outline):not(.btn-muted):hover::before {
+  &:not(.btn-outline):not(.btn-muted):not(:disabled):hover::before {
     @apply from-rose-600 to-rose-700;
   }
 
@@ -57,8 +57,12 @@
   }
 
   /* Adjust visibility for form contexts */
-  &:not(.btn-outline):not(.btn-muted) {
+  &:not(.btn-outline):not(.btn-muted):not(:disabled) {
     @apply bg-gradient-to-br from-rose-500 to-rose-600;
+  }
+
+  &:disabled {
+    @apply opacity-65 cursor-not-allowed;
   }
 }
 
