--- a/app/views/users/_connected_accounts.html.erb
+++ b/app/views/users/_connected_accounts.html.erb
@@ -96,7 +96,7 @@
           <% end %>
         <% end %>
 
-        <div class="flex items-center gap-2 md:gap-3 p-2 md:p-3 mt-4 rounded-lg bg-slate-100 dark:bg-slate-700/30 border border-slate-200 dark:border-slate-700">
+        <div class="flex items-start gap-2 md:gap-3 p-2 md:p-3 mt-4 rounded-lg bg-slate-100 dark:bg-slate-700/30 border border-slate-200 dark:border-slate-700">
           <%= inline_svg_tag 'icons/info.svg', class: 'size-4 shrink-0 text-light' %>
           <p class="text-light text-xs text-pretty">Currently, activities can only sync from Strava to PaceMaker. Reverse syncing from PaceMaker to Strava will be available in a future update.</p>
         </div>
