style: rewrite CTAs to be more specific and direct

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -14,7 +14,7 @@
       The all&hyphen;in&hyphen;one platform for cross&hyphen;country runners and teams to set goals, track progress, and stay connected.
     </p>
     <div class="mt-6 flex justify-center">
-      <%= link_to 'Get Started', new_user_registration_path, class: 'btn btn-primary' %>
+      <%= link_to 'Unlock Your Potential', new_user_registration_path, class: 'btn btn-primary' %>
     </div>
   </div>
 </section>
@@ -287,7 +287,7 @@
       Join the runners and coaches who are transforming their running experience with PaceMaker.
     </p>
     <div class="mt-6 flex items-center justify-center gap-4">
-      <%= link_to 'Sign Up Now', new_user_registration_path, class: 'btn btn-primary' %>
+      <%= link_to 'Start Tracking Now', new_user_registration_path, class: 'btn btn-primary' %>
     </div>
   </div>
 </section>
