style(team): left-align text in team description

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -64,7 +64,7 @@
           </span>
         </div>
 
-        <%= simple_format @team.description, class: 'text-soft text-sm text-pretty leading-snug' if @team.description.present? %>
+        <%= simple_format @team.description, class: 'text-left text-soft text-sm text-pretty leading-snug' if @team.description.present? %>
       </div>
     </div>
 
