style: use stylized apostrophe

--- a/app/views/teams/forms/_edit_team.html.erb
+++ b/app/views/teams/forms/_edit_team.html.erb
@@ -1,6 +1,6 @@
 <div class="pb-6 mt-10 mb-6 border-b dark:border-slate-700">
   <h1 class="heading">Edit Team</h1>
-  <p class="text-soft">Edit your team's details.</p>
+  <p class="text-soft">Edit your team&#8217;s details.</p>
 </div>
 
 <%= render 'teams/forms/form', team: team %>
