--- a/app/views/teams/shared/_team_links.html.erb
+++ b/app/views/teams/shared/_team_links.html.erb
@@ -8,7 +8,7 @@
 
   <%= link_to edit_team_path(team, tab: 'settingsTab'), class: 'dropdown-option', data: { turbo: false } do %>
     <%= inline_svg_tag 'icons/settings.svg', class: 'size-5' %>
-    Edit team settings
+    Edit settings
   <% end %>
 <% end %>
 
