style(sidebar): adjust spacing and padding of sidebar

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -13,7 +13,7 @@
     data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
     data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
     data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
-    class="h-[calc(100%-2rem)] flex flex-col overflow-y-auto p-2 bg-white dark:bg-slate-800 border dark:border-slate-700 m-4 mr-0 rounded-lg shadow-xl"
+    class="h-[calc(100%-1.5rem)] flex flex-col overflow-y-auto p-1.5 bg-white dark:bg-slate-800 border dark:border-slate-700 m-3 mr-0 rounded-xl shadow-xl"
   >
     <button onclick="window.location.reload()" class="mx-2 mt-2 mb-4 hover:opacity-75">
       <%= inline_svg_tag('logo.svg', class: 'w-48') %>
