--- a/app/assets/stylesheets/custom/forms.css
+++ b/app/assets/stylesheets/custom/forms.css
@@ -167,7 +167,7 @@
 
 /* Used to turn a checkbox input into a sliding switch control. */
 @utility form-input-toggle {
-  @apply relative inline-flex h-6 w-11 items-center rounded-full transition-colors focus:outline-hidden focus:ring-2 focus:ring-offset-2 shrink-0;
+  @apply relative select-none inline-flex h-6 w-11 items-center rounded-full transition-colors focus:outline-hidden focus:ring-2 focus:ring-offset-2 shrink-0;
 }
 
 .form-input-toggle {
