fix(settings): remove empty teams hash from default page options if user has no teams

--- a/app/views/users/_edit_settings.html.erb
+++ b/app/views/users/_edit_settings.html.erb
@@ -107,7 +107,7 @@
       @user.teams.to_h do |team|
         ["Topics for #{team.name}", team.topics.map { |topic| [topic.title, team_topic_messages_path(team, topic)] }]
       end
-    ) %>
+    ).reject { |_, value| value.blank? } %>
 
     <% default_selection = @user.default_page.presence || UserSettings.defaults[:navigation][:default_page] %>
     <% select_options = options_for_select(standalone_options, default_selection) + grouped_options_for_select(grouped_options, default_selection) %>
